--- a/popcorn/templates/popcorn/popcorn.html
+++ b/popcorn/templates/popcorn/popcorn.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% load bootstrap_toolkit %}
+{% load reform %}
 
 {% block content %}
 	<form class="form-horizontal" method="POST" action="{{ request.get_full_path }}" enctype="multipart/form-data">
 		{% csrf_token %}
 	    <fieldset>
 	        <legend>Popcorn</legend>
-	        {{ form|as_bootstrap }}
+	        {% reform form %}
 	    </fieldset>
 	    <div class="form-actions">
 	    	<div class="btn-group">
