--- a/popcorn/templates/popcorn/popcorn.html
+++ b/popcorn/templates/popcorn/popcorn.html
@@ -1,18 +1,10 @@
 {% extends 'base.html' %}
-{% load reform %}
 
 {% block content %}
 	<form class="form-horizontal" method="POST" action="{{ request.get_full_path }}" enctype="multipart/form-data">
 		{% csrf_token %}
-	    <fieldset>
-	        <legend>Popcorn</legend>
-	        {% reform form %}
-	    </fieldset>
-	    <div class="form-actions">
-	    	<div class="btn-group">
-		      <button type="submit" class="btn btn-primary">Submit</button>
-		      <a class="btn btn-danger" onclick="javascript:window.close()">Cancel</a>
-	    	</div>
-	    </div>
+        {{ form.as_p }}
+        <button type="submit">Submit</button>&nbsp;
+		<a onclick="javascript:window.close()">Cancel</a>
 	</form>
 {% endblock %}
